Got plot to update on drop down update
